# cengine

./: .gitignore  CMakeLists.txt  README.md  main.c
res/shaders/: basic.frag  basic.shader  basic.vert
src/: main.cpp
src/components/: Camera.hpp  Input.hpp  Material.hpp  Mesh.hpp  Transform.hpp
src/core/: ComponentArray.hpp  Coordinator.hpp  EntityManager.cpp  EntityManager.hpp  Scene.cpp  Scene.hpp  SystemManager.hpp  Window.cpp  Window.hpp  ecs.h  window.c  window.h
src/game/: Component.cpp  Component.hpp  Thing.cpp  Thing.hpp
src/game/components/: Mesh.cpp  Mesh.hpp
src/render/: GLDebug.h  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Shaders.cpp  Shaders.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/renderer/: renderer.c  renderer.h
src/systems/: CameraControlSystem.cpp  CameraSystem.cpp  CameraSystem.hpp  InputSystem.cpp  InputSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderableSystem.cpp  RenderableSystem.hpp
src/systems/OLD/: CameraControlSystem.cpp  PhysicsSystem.cpp  PlayerControlSystem.cpp  RenderSystem.cpp
